Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-5656

Escape Delphi keywords with '&' prefix instead of '_' suffix

    XMLWordPrintableJSON

Details

    • Patch Available

    Description

      Currently the Delphi compiler does not differentiate between real Delphi language keywords (that can be escaped via & prefix) and predefined names/types that must be handled differently (we do this by adding a underscore postfix so it becomes e.g. 'System_' instead of 'System' which would collide with the Delphi runtime unit of that name).

      This patch addresses this and handles keywords properly with '&' by default.

      Compatibility: This may break code if one of the Delphi keywords has been used in the IDL. 

      Workaround. The old behaviour can be restored via Thrift compiler switch.

      Attachments

        Issue Links

          Activity

            People

              jensg Jens Geyer
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m