THRIFT-5656 Escape Delphi keywords with '&' prefix instead of '_' suffix Client: Delphi Patch: Jens Geyer